--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,21 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@android:color/holo_blue_light">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:id="@+id/tag_message_text"/>
+        android:id="@+id/tag_message_text"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:textSize="24dp"
+        android:textAlignment="center"
+        android:fontFamily="helvetica"
+        android:textColor="@android:color/white"
+       />
 
 
 
