--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,47 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/nfc_tag"
+        android:id="@+id/nfc_tag_text"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:textSize="18dp"
+        android:textAlignment="center"
+        android:fontFamily="helvetica"
+        android:textColor="@android:color/white"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/product_id_text"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:textSize="24dp"
+        android:textAlignment="center"
+        android:fontFamily="helvetica"
+        android:textColor="@android:color/white"
+        android:layout_below="@id/nfc_tag_text"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/product_info"
+        android:id="@+id/product_info_text"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:textSize="18dp"
+        android:textAlignment="center"
+        android:fontFamily="helvetica"
+        android:textColor="@android:color/white"
+        android:layout_below="@id/product_id_text"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/tag_message_text"
         android:layout_centerVertical="true"
@@ -17,7 +58,10 @@
         android:textAlignment="center"
         android:fontFamily="helvetica"
         android:textColor="@android:color/white"
+        android:layout_below="@id/product_info_text"
        />
+
+
 
 
 
