--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,12 @@
         android:layout_height="wrap_content"
         android:text="@string/nfc_tag"
         android:id="@+id/nfc_tag_text"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
         android:textSize="18dp"
         android:textAlignment="center"
         android:fontFamily="helvetica"
         android:textColor="@android:color/white"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="match_parent"
@@ -61,8 +60,23 @@
         android:layout_below="@id/product_info_text"
        />
 
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="product info"
+        android:id="@+id/product_button"
+        android:layout_marginBottom="101dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Nutrition Info"
+        android:id="@+id/nutrition_button"
+        android:layout_marginBottom="45dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
