--- a/app/src/main/res/layout/activity_v_wand_connect.xml
+++ b/app/src/main/res/layout/activity_v_wand_connect.xml
@@ -7,15 +7,30 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.teamsight.touchvision.vWandConnectActivity">
-
+    tools:context="com.teamsight.touchvision.vWandConnectActivity"
+    android:background="@android:color/black">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/vwand_connect_image"
-        android:layout_marginTop="117dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:src="@mipmap/bluetooth"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/bluetooth_image"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/wifi_graphic"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/wifi_image"
+        android:layout_above="@id/vwand_image"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/vwand_graphic"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/vwand_image"/>
 
 </RelativeLayout>
