--- a/app/src/main/res/layout/activity_v_wand_connect.xml
+++ b/app/src/main/res/layout/activity_v_wand_connect.xml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.teamsight.touchvision.vWandConnectActivity"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    android:gravity="bottom"
+    android:weightSum="1">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:src="@mipmap/bluetooth"
-        android:layout_centerHorizontal="true"
         android:id="@+id/bluetooth_image"
-        />
+        android:layout_weight="0.10" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/wifi_graphic"
+        android:layout_width="168dp"
+        android:layout_height="109dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/wifi_graphic_small"
         android:id="@+id/wifi_image"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/vwand_graphic"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/vwand_image"/>
 
-</RelativeLayout>
+        android:layout_weight="0.23" />
+
+    <ImageView
+        android:layout_width="282dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/vwand_graphic_centered"
+        android:id="@+id/vwand_image"
+        android:layout_marginBottom="0dp"
+        android:layout_weight="0.48" />
+
+</LinearLayout>
